--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,26 @@ bower_components/
 # OS generated files
 .DS_Store
 Thumbs.db
-# React files
+
+# dependencies
 /node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
 /build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
