--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml app configuration file generated for aposcar-api on 2024-02-18T13:06:16-03:00
+# fly.toml app configuration file generated for aposcar-api on 2024-02-19T10:39:58-03:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
@@ -15,7 +15,7 @@ console_command = '/code/manage.py shell'
 [http_service]
   internal_port = 8000
   force_https = true
-  auto_stop_machines = true
+  auto_stop_machines = false
   auto_start_machines = true
   min_machines_running = 0
   processes = ['app']
